Added gmsh meshing and minor formatting

--- a/jupyter/skel/ukacm_autumn_school/multifield_plasticity/multifield_plasticity.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/multifield_plasticity/multifield_plasticity.ipynb
@@ -480,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define utility functions (running the analysis, results post-processing)"
+    "### Define utility functions (mesh generation, running the analysis, results post-processing)"
    ]
   },
   {
@@ -503,7 +503,7 @@
     "\n",
     "def parse_log_file(params):\n",
     "    res = AttrDict()\n",
-    "    with open(\"log\", \"r\") as log_file:\n",
+    "    with open(params.log_file, \"r\") as log_file:\n",
     "        for line in log_file:\n",
     "            line = line.strip()\n",
     "            if \"nb global dofs\" in line:\n",
@@ -527,12 +527,186 @@
     "            f.write(line + '\\n')\n",
     "            # print the data as it is written to the file\n",
     "            print(line)\n",
-    "            \n",
+    "\n",
+    "def generate_cylinder_mesh(params):\n",
+    "    \n",
+    "    generate_disp_time_history(params) # Create a displacement-time history file\n",
+    "    \n",
+    "    L = params.length # Set total length of cylinder\n",
+    "    R = params.radius # Set the cylinder radius\n",
+    "    tol = 0.1\n",
+    "    reduction = 0.982 # Set the reduction in cross-sectional area for localisation\n",
+    "    \n",
+    "    gmsh.initialize()\n",
+    "    gmsh.clear()\n",
+    "    \n",
+    "\n",
+    "    # Add points to define geometry,\n",
+    "    # add lines which connect points,\n",
+    "    # add curve loops of lines which are then made into planar surfaces,\n",
+    "    # and add circle arcs to complete cylinder.\n",
+    "    \n",
+    "    gmsh.model.geo.addPoint(0, 0, 0, tol, 1)\n",
+    "    gmsh.model.geo.addPoint(reduction*R,0,0, tol, 2) # outer edge\n",
+    "    gmsh.model.geo.addPoint(0, L/2,0, tol, 3)\n",
+    "    gmsh.model.geo.addPoint(R,L/2,0, tol, 4) # outer edge\n",
+    "    gmsh.model.geo.addPoint(R,L*0.084204796,0, tol, 5) # outer edge\n",
+    "    gmsh.model.geo.addPoint(R/2,L/2,0, tol, 6)\n",
+    "    gmsh.model.geo.addPoint(R/2,L*0.084204796,0, tol, 7)\n",
+    "    gmsh.model.geo.addPoint(R/2,0,0, tol, 8)\n",
+    "\n",
+    "    gmsh.model.geo.addLine(3, 6, 1)\n",
+    "    gmsh.model.geo.addLine(6, 8, 2)\n",
+    "    gmsh.model.geo.addLine(8, 1, 3)\n",
+    "    gmsh.model.geo.addLine(1, 3, 4)\n",
+    "    gmsh.model.geo.addLine(6, 4, 5)\n",
+    "    gmsh.model.geo.addLine(4, 5, 6)\n",
+    "    gmsh.model.geo.addLine(5, 2, 26)\n",
+    "    gmsh.model.geo.addLine(2, 8, 7)\n",
+    "\n",
+    "    gmsh.model.geo.addCurveLoop([4, 1, 2, 3], 1)\n",
+    "    gmsh.model.geo.addPlaneSurface([1], 1)\n",
+    "\n",
+    "    gmsh.model.geo.addCurveLoop([5, 6, 26, 7, -2], 2)\n",
+    "    gmsh.model.geo.addPlaneSurface([2], 2)\n",
+    "\n",
+    "    gmsh.model.geo.addPoint(0,0,reduction*R, tol, 12) # outer edge\n",
+    "    gmsh.model.geo.addPoint(0,L/2,R, tol, 14) # outer edge\n",
+    "    gmsh.model.geo.addPoint(0,L*0.084204796,R, tol, 15) # outer edge\n",
+    "    gmsh.model.geo.addPoint(0,L/2,R/2, tol, 16)\n",
+    "    gmsh.model.geo.addPoint(0,L*0.084204796,R/2, tol, 17)\n",
+    "    gmsh.model.geo.addPoint(0,0,R/2, tol, 18)\n",
+    "\n",
+    "    gmsh.model.geo.addLine(3, 16, 8)\n",
+    "    gmsh.model.geo.addLine(16, 14, 9)\n",
+    "    gmsh.model.geo.addLine(14, 15, 10)\n",
+    "    gmsh.model.geo.addLine(15, 12, 27)\n",
+    "    gmsh.model.geo.addLine(12, 18, 11)\n",
+    "    gmsh.model.geo.addLine(18, 1, 12)\n",
+    "    gmsh.model.geo.addLine(18, 16, 13)\n",
+    "\n",
+    "    gmsh.model.geo.addCurveLoop([13, 9, 10, 27, 11], 3)\n",
+    "    gmsh.model.geo.addPlaneSurface([-3], 3)\n",
+    "\n",
+    "    gmsh.model.geo.addCurveLoop([8, -13, 12, 4], 4)\n",
+    "    gmsh.model.geo.addPlaneSurface([-4], 4)\n",
+    "\n",
+    "    gmsh.model.geo.addPoint(0.5*np.sqrt(2)*reduction*R,0,0.5*np.sqrt(2)*reduction*R, tol, 22) # outer edge\n",
+    "    gmsh.model.geo.addPoint(0.5*np.sqrt(2)*R,L/2,0.5*np.sqrt(2)*R, tol, 24) # outer edge\n",
+    "    gmsh.model.geo.addPoint(R/2,0,R/2, tol, 28)\n",
+    "    gmsh.model.geo.addPoint(0.5*np.sqrt(2)*R,L*0.084204796,0.5*np.sqrt(2)*R, tol, 25) # outer edge\n",
+    "    gmsh.model.geo.addPoint(R/2,L/2,R/2, tol, 26)\n",
+    "    gmsh.model.geo.addPoint(R/2,L*0.084204796,R/2, tol, 27)\n",
+    "\n",
+    "    gmsh.model.geo.addLine(26, 16, 14)\n",
+    "    gmsh.model.geo.addLine(26, 6, 15)\n",
+    "    gmsh.model.geo.addLine(26, 28, 16)\n",
+    "    gmsh.model.geo.addLine(28, 8, 17)\n",
+    "    gmsh.model.geo.addLine(28, 18, 18)\n",
+    "    \n",
+    "    gmsh.model.geo.addCurveLoop([18, 13, -14, 16], 5)\n",
+    "    gmsh.model.geo.addPlaneSurface([5], 5)\n",
+    "    gmsh.model.geo.addCurveLoop([15, 2, -17, -16], 6)\n",
+    "    gmsh.model.geo.addPlaneSurface([6], 6)\n",
+    "    \n",
+    "    gmsh.model.geo.addCircleArc(14, 3, 24, 19)\n",
+    "    gmsh.model.geo.addCircleArc(24, 3, 4, 20)\n",
+    "    gmsh.model.geo.addCircleArc(12, 1, 22, 21)\n",
+    "    gmsh.model.geo.addCircleArc(22, 1, 2, 22)\n",
+    "    gmsh.model.geo.addPoint(0,L*0.084204796,0, tol, 29)\n",
+    "    gmsh.model.geo.addCircleArc(15, 29, 25, 30)\n",
+    "    gmsh.model.geo.addCircleArc(25, 29, 5, 31)\n",
+    "    \n",
+    "    gmsh.model.geo.addLine(22, 28, 23)\n",
+    "    gmsh.model.geo.addLine(24, 26, 24)\n",
+    "    gmsh.model.geo.addLine(24, 25, 25)\n",
+    "    gmsh.model.geo.addLine(25, 22, 28)\n",
+    "\n",
+    "    gmsh.model.geo.addCurveLoop([24, 16, -23, -25, -28], 7)\n",
+    "    gmsh.model.geo.addPlaneSurface([7], 7)\n",
+    "    gmsh.model.geo.addCurveLoop([18, -11, 21, 23], 8)\n",
+    "    gmsh.model.geo.addPlaneSurface([-8], 8)\n",
+    "    gmsh.model.geo.addCurveLoop([23, 17, -7, -22], 9)\n",
+    "    gmsh.model.geo.addPlaneSurface([9], 9)\n",
+    "    gmsh.model.geo.addCurveLoop([1, -15, 14, -8], 10)\n",
+    "    gmsh.model.geo.addPlaneSurface([-10], 10)\n",
+    "    gmsh.model.geo.addCurveLoop([20, -5, -15, -24], 11)\n",
+    "    gmsh.model.geo.addPlaneSurface([11], 11)\n",
+    "    gmsh.model.geo.addCurveLoop([24, 14, 9, 19], 12)\n",
+    "    gmsh.model.geo.addPlaneSurface([12], 12)\n",
+    "    gmsh.model.geo.addCurveLoop([10, 30, -25, -19], 13)\n",
+    "    gmsh.model.geo.addSurfaceFilling([13], 13)\n",
+    "    gmsh.model.geo.addCurveLoop([27, 21, -28, -30], 16)\n",
+    "    gmsh.model.geo.addSurfaceFilling([16], 16)\n",
+    "    gmsh.model.geo.addCurveLoop([22, -26, -31, 28], 14)\n",
+    "    gmsh.model.geo.addSurfaceFilling([14], 14)\n",
+    "    gmsh.model.geo.addCurveLoop([31, -6, -20, 25], 17)\n",
+    "    gmsh.model.geo.addSurfaceFilling([17], 17)\n",
+    "    gmsh.model.geo.addCurveLoop([17, 3, -12, -18], 15)\n",
+    "    gmsh.model.geo.addPlaneSurface([-15], 15)\n",
+    "    \n",
+    "    # Create a surface of all faces\n",
+    "    sl = gmsh.model.geo.addSurfaceLoop([15, 1, 4, 10, 9, 2, 11, 14, 8, 3, 12, 13, 16, 17],1)\n",
+    "    # Create a volume enclosed by the above surface loop\n",
+    "    volume = gmsh.model.geo.addVolume([sl])\n",
+    "\n",
+    "    gmsh.model.geo.synchronize()\n",
+    "\n",
+    "    # Add a boundary for the applied displacement\n",
+    "    boundary_1 = gmsh.model.addPhysicalGroup(2, [12, 10, 11])\n",
+    "    gmsh.model.setPhysicalName(2, boundary_1, 'FIX_Y1')\n",
+    "    \n",
+    "    # Add a boundaries to constrain the geometry in X, Y, and Z directions\n",
+    "    boundary_2 = gmsh.model.addPhysicalGroup(2, [8, 15, 9])\n",
+    "    gmsh.model.setPhysicalName(2, boundary_2, 'FIX_Y')\n",
+    "    boundary_3 = gmsh.model.addPhysicalGroup(2, [4, 3])\n",
+    "    gmsh.model.setPhysicalName(2, boundary_3, 'FIX_X')\n",
+    "    boundary_4 = gmsh.model.addPhysicalGroup(2, [1, 2])\n",
+    "    gmsh.model.setPhysicalName(2, boundary_4, 'FIX_Z')\n",
+    "    \n",
+    "    # Define the domain using the volume entity\n",
+    "    domain = gmsh.model.addPhysicalGroup(3, [volume])\n",
+    "    gmsh.model.setPhysicalName(3, domain, 'DOMAIN')\n",
+    "\n",
+    "    gmsh.model.geo.synchronize()\n",
+    "    \n",
+    "    # Set min and max mesh sizes equally to get a uniformly-sized mesh\n",
+    "    gmsh.option.setNumber(\"Mesh.MeshSizeMin\", params.element_size)\n",
+    "    gmsh.option.setNumber(\"Mesh.MeshSizeMax\", params.element_size)\n",
+    "\n",
+    "    # Set the mesh algorithm and mesh the geometry\n",
+    "    gmsh.option.setNumber(\"Mesh.Algorithm\", 6)\n",
+    "    gmsh.model.mesh.generate(3)\n",
+    "    \n",
+    "    # Create a med file of the mesh\n",
+    "    med_file = params.mesh_file + \".med\"\n",
+    "    gmsh.write(med_file)\n",
+    "\n",
+    "    gmsh.finalize()\n",
+    "    \n",
+    "    # Apply the boundary conditions in the config file to the med file and export as h5m\n",
+    "    h5m_file=params.mesh_file + \".h5m\"\n",
+    "    !read_med -med_file {med_file} -log_sl error -output_file {h5m_file} -meshsets_config {params.config_file+\".cfg\"}\n",
+    "    \n",
+    "    # Visualise mesh?\n",
+    "    if params.show_mesh:\n",
+    "        vtk_file=params.mesh_file + \".vtk\"\n",
+    "        !mbconvert {h5m_file} {vtk_file}\n",
+    "\n",
+    "        mesh = pv.read(vtk_file)\n",
+    "        mesh = mesh.shrink(0.9)\n",
+    "\n",
+    "        p = pv.Plotter(notebook=True)\n",
+    "        p.add_mesh(mesh, smooth_shading=False)\n",
+    "\n",
+    "        p.camera_position = \"xy\"\n",
+    "        p.show(jupyter_backend='ipygany')\n",
+    "\n",
     "def run_mofem(params):\n",
     "    params.part_file = params.mesh_file + \"_\" + str(params.nproc) + \"p.h5m\"\n",
     "    \n",
     "    !rm -rf {params.show_file}*\n",
-    "    !{um_view}/bin/mofem_part -my_file {params.mesh_file}\".cub\" -output_file {params.part_file} \\\n",
+    "    !{um_view}/bin/mofem_part -my_file {params.mesh_file}\".h5m\" -output_file {params.part_file} \\\n",
     "    -my_nparts {params.nproc}\n",
     "    \n",
     "    !export OMPI_MCA_btl_vader_single_copy_mechanism=none && \\\n",
@@ -668,37 +842,37 @@
     "\n",
     "def extractFu(params):\n",
     "    # Extract relevant data from log file and save into other files\n",
-    "    !awk '/SimpleProblem_U_FIX_Z1/ { b = 1 }; /Force/ { if(b) { print $0; b=0; } }' log > reaction\n",
-    "    !grep Ux 'log' > ux\n",
-    "    !grep Uy 'log' > uy\n",
-    "    !grep Uz 'log' > uz\n",
-    "    \n",
+    "    !grep Force '{params.log_file}' > reaction\n",
+    "    !grep Ux '{params.log_file}' > ux\n",
+    "    !grep Uy '{params.log_file}' > uy\n",
+    "    !grep Uz '{params.log_file}' > uz\n",
+    "\n",
     "    # Format data from Miehe paper\n",
     "    miehe_force=\"0 0 0.1449 56.66 0.618 60.717 1.304 65.50 2.33 70.35 3.304 73.52 3.9613 74.9 4.7729 76.02 5.381 76.61 5.922 76.83 6.927 76.09 7.429 74.9 7.9516 73.15 8.763 69.54 9.429 65.79 10.019 61.96 10.444 59.09 10.927 55.78 11.256 53.505 11.574 51.14 12.193 46.95 12.531 44.59 12.859 42.46 13.536 38.417 13.874 36.65\"\n",
     "    miehe_force=get_data_from_string(miehe_force)\n",
     "    data_miehe=pd.DataFrame(miehe_force)\n",
     "    data_miehe=data_miehe.rename(columns={0: \"displacement\", 1: \"force\"})\n",
-    "    \n",
+    "\n",
     "    # Extract the reaction force and displacements in the correct direction\n",
     "    data_reaction=pd.read_csv('reaction',sep='\\s+',header=None)\n",
-    "    data_uz=pd.read_csv('uz',sep='\\s+',header=None)\n",
+    "    data_uy=pd.read_csv('uy',sep='\\s+',header=None)\n",
     "\n",
-    "    data_reaction=data_reaction.drop([0,1,2,3,4,5], axis=1)\n",
-    "    data_reaction=data_reaction.rename(columns={6: \"force\"})\n",
-    "    data_uz=data_uz.drop([0,1,2,3,4,5,6,8], axis=1)\n",
-    "    data_uz=data_uz.rename(columns={7: \"max\"})\n",
+    "    data_reaction=data_reaction.drop([0,1,2,3,4,6], axis=1)\n",
+    "    data_reaction=data_reaction.rename(columns={5: \"force\"})\n",
+    "    data_uy=data_uy.drop([0,1,2,3,4,6,8], axis=1)\n",
+    "    data_uy=data_uy.rename(columns={9: \"max\"})\n",
     "\n",
     "    plt.rcParams['figure.figsize'] = [15, 10]\n",
     "\n",
     "    # Reaction force acts on only one quarter of the total area\n",
     "    data_reaction['force']=-4.*data_reaction['force'].to_numpy()/1000.0\n",
     "    # Similarly there is twice as much deformation, on account of symmetry\n",
-    "    data_uz['elongation']=-2.*data_uz['max'].to_numpy()\n",
+    "    data_uy['elongation']=2.*data_uy['max'].to_numpy()\n",
     "\n",
     "    # Plot data\n",
     "    fig, ax = plt.subplots()\n",
-    "    ax.plot(data_uz['elongation'].to_numpy(), \n",
-    "            data_reaction['force'].to_numpy()[1:], 'ro-', label='multifield plasticity (MoFEM)')\n",
+    "    ax.plot(data_uy['elongation'].to_numpy(), \n",
+    "            data_reaction['force'].to_numpy()[1::4], 'ro-', label='multifield plasticity (MoFEM)')\n",
     "    ax.plot(data_miehe['displacement'].to_numpy(), \n",
     "            data_miehe['force'].to_numpy(), 'b-', label='classical computational plasticity (Miehe paper)')\n",
     "    ax.set(xlabel='u [mm]', ylabel='force [kN]',\n",
@@ -727,8 +901,13 @@
     "params = AttrDict() # Attribute dictionary for storing the parameters\n",
     "\n",
     "# Pre-processing parameters\n",
-    "params.mesh_file = \"necking_test\" # no file extension needed\n",
-    "params.bc_time_history = \"disp_time\" # no file extension needed\n",
+    "params.mesh_file = \"necking_test\" # No file extension needed\n",
+    "params.config_file = \"bc\" # File used to define magnitude of boundary conditions. No file extension needed\n",
+    "params.bc_time_history = \"disp_time\" # File used to define time history of boundary conditions. No file extension needed\n",
+    "params.element_size = 1.5 # Approximate element size\n",
+    "params.show_mesh = True # Show mesh in the notebook\n",
+    "params.length = 2*26.67 # mm # Length of the cylinder\n",
+    "params.radius = 6.4135 # mm # Radius of the cylinder\n",
     "\n",
     "# Constitutive model parameters\n",
     "bulk_modulus = 164.206e3 # Pa\n",
@@ -743,8 +922,9 @@
     "\n",
     "# Solution parameters\n",
     "params.executable = \"plastic_3d\" # Executable name\n",
+    "params.log_file = \"log\" # log file name\n",
     "params.nproc = 4 # Number of processors\n",
-    "params.ts_dt = 0.015 # Time step size\n",
+    "params.ts_dt = 1.e-3 # Time step size\n",
     "params.ts_max_time = 1.0 # End time of simulation\n",
     "params.ts_type = \"theta\" # Time integration scheme\n",
     "params.snes_linesearch_type = \"l2\" \n",
@@ -753,6 +933,24 @@
     "\n",
     "# Post-processing parameters\n",
     "params.show_file = \"out\" # Output file name. No extension needed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate the mesh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "generate_cylinder_mesh(params)"
    ]
   },
   {
@@ -777,7 +975,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Post pro-process results"
+    "### Post-process results"
    ]
   },
   {
@@ -789,7 +987,7 @@
     "params.show_field = \"PLASTIC_STRAIN\" # PLASTIC_STRAIN, PLASTIC_MULTIPLIER, FIRST_PIOLA, GRAD, U\n",
     "params.show_edges = False # True - show element edges, False - do not show edges\n",
     "params.mirror = True # True - show mirrored mesh, False - show original mesh\n",
-    "params.gif = True # True - generate gif, False - show last timestep\n",
+    "params.gif = False # True - generate gif, False - show last timestep\n",
     "params.clim = [0,2.] # Colorbar limits [min, max]\n",
     "\n",
     "# Generate contour plot at final timestep or animation for all timesteps\n",
@@ -812,13 +1010,6 @@
     "# Plot load-disp curve\n",
     "extractFu(params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
