Re-added minor changes to comments and formatting

--- a/jupyter/skel/ukacm_autumn_school/multifield_plasticity/multifield_plasticity.ipynb
+++ b/jupyter/skel/ukacm_autumn_school/multifield_plasticity/multifield_plasticity.ipynb
@@ -727,8 +727,8 @@
     "params = AttrDict() # Attribute dictionary for storing the parameters\n",
     "\n",
     "# Pre-processing parameters\n",
-    "params.mesh_file = \"necking_test\" # no file extension needed\n",
-    "params.bc_time_history = \"disp_time\" # no file extension needed\n",
+    "params.mesh_file = \"necking_test\" # No file extension needed\n",
+    "params.bc_time_history = \"disp_time\" # File used to define time history of boundary conditions. No file extension needed\n",
     "\n",
     "# Constitutive model parameters\n",
     "bulk_modulus = 164.206e3 # Pa\n",
@@ -777,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Post pro-process results"
+    "### Post-process results"
    ]
   },
   {
@@ -789,7 +789,7 @@
     "params.show_field = \"PLASTIC_STRAIN\" # PLASTIC_STRAIN, PLASTIC_MULTIPLIER, FIRST_PIOLA, GRAD, U\n",
     "params.show_edges = False # True - show element edges, False - do not show edges\n",
     "params.mirror = True # True - show mirrored mesh, False - show original mesh\n",
-    "params.gif = True # True - generate gif, False - show last timestep\n",
+    "params.gif = False # True - generate gif, False - show last timestep\n",
     "params.clim = [0,2.] # Colorbar limits [min, max]\n",
     "\n",
     "# Generate contour plot at final timestep or animation for all timesteps\n",
@@ -812,13 +812,6 @@
     "# Plot load-disp curve\n",
     "extractFu(params)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
