--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -37,6 +37,7 @@
   - Callum Runice, The University of Glasgow, Scotland, UK
   - Ross Williams, The University of Glasgow, Scotland, UK
   - Joshua Gorham, The University of Glasgow, Scotland, UK
+  - MD Tanzib Ehsan Sanglap, The University of Glasgow, Scotland, UK
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/danielebarbera/">Daniele Barbera</a>, Advanced Forming Research Centre, Scotland, UK
 
 \section mofem_users_modules_past_contributors Past Contributors
