--- a/mofem/doc/authors_page.dox
+++ b/mofem/doc/authors_page.dox
@@ -8,7 +8,7 @@
   crossorigin="anonymous" referrerpolicy="no-referrer" />
 \endhtmlonly
 
-\section mofem_principal_authors Scientific Managment
+\section mofem_principal_authors Scientific Management
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/lukaszkaczmarczyk/">Łukasz Kaczmarczyk</a>, The University of Glasgow, Scotland, UK, 
     <a rel="me" href="https://fosstodon.org/@likask"><i class="fab fa-mastodon"></i></a> <a href="https://twitter.com/LukaszKaczmarcz"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>
   - <a href="https://www.gla.ac.uk/schools/engineering/staff/chrispearce/">Chris Pearce</a>, The University of Glasgow, Scotland, UK 
@@ -34,7 +34,7 @@
 \section mofem_users_modules_developers Users Modules Contributors
 
   - Richard Olley, The University of Glasgow, Scotland, UK
-  - Callum Runice, The University of Glasgow, Scotland, UK
+  - Callum Runcie, The University of Glasgow, Scotland, UK
   - Ross Williams, The University of Glasgow, Scotland, UK
   - Joshua Gorham, The University of Glasgow, Scotland, UK
   - MD Tanzib Ehsan Sanglap, The University of Glasgow, Scotland, UK
