--- a/mofem/doc/about_us.dox
+++ b/mofem/doc/about_us.dox
@@ -8,7 +8,7 @@
 \htmlonly
 <a href="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215"><img src="http://joss.theoj.org/papers/43d9625e5ed28d5c493bfc0fae6d8215/status.svg"></a>
 \endhtmlonly
-- Mailing list: <a href="https://groups.google.com/forum/#!forum/mofem-group">mofem-group@googlegroups.com</a>
+- Google groups Q&A forum: <a href="https://groups.google.com/forum/#!forum/mofem-group">mofem-group@googlegroups.com</a>
 - Version repository: <https://bitbucket.org/likask/mofem-cephas>
 
 \section legal_stuff Legal stuff
@@ -17,10 +17,10 @@
 
 \include users_modules/LICENSE.md 
 
-\subsection license_users_modules Users Modudules License
+\subsection license_users_modules Users Modules License
 
-Users Module are separate software entities in their own repository that can
-follow their license agreements and copyrights. If the User Module license and
+Users Modules are separate software entities in their own repository that can
+follow their license agreements and copyrights. If the Users Module license and
 copyright are not stated explicitly, it is assumed that it follows the copyright
 the MoFEM library.
 
