Put third party packages in alphabetical order

--- a/mofem/doc/about_us.dox
+++ b/mofem/doc/about_us.dox
@@ -28,15 +28,16 @@ the MoFEM library.
 
 List of third party libraries and packages used by MoFEM:
 
-- SIGMA Tools <http://press3.mcs.anl.gov/sigma>
-- MOAB <http://ftp.mcs.anl.gov/pub/fathom/moab-docs/index.html>.
-- PETSc <http://www.mcs.anl.gov/petsc/documentation/index.html>
+- ADOL-C <https://projects.coin-or.org/ADOL-C>
 - BOOST <http://www.boost.org>
 	- uBlas <http://www.boost.org/doc/libs/release/libs/numeric/>
-- ADOL-C <https://projects.coin-or.org/ADOL-C>
 - CMake <http://www.cmake.org>
-- ParaView <http://www.paraview.org>
 - FTensor <https://wlandry.net/Projects/FTensor/>
+- MFront <http://tfel.sourceforge.net>
+- MOAB <http://ftp.mcs.anl.gov/pub/fathom/moab-docs/index.html>.
+- ParaView <http://www.paraview.org>
+- PETSc <http://www.mcs.anl.gov/petsc/documentation/index.html>
+- SIGMA Tools <http://press3.mcs.anl.gov/sigma>
 
 \section Acknowledgements
 
