--- a/mofem/doc/school_2021.dox
+++ b/mofem/doc/school_2021.dox
@@ -1,9 +1,6 @@
-/*! \page mofem_school_page School 
-
+/*! \page mofem_school_2021  %MoFEM UKACM 2021 School: "Weak form" in many flavours. Design and sustainable code development 
  
-\section mofem_school MoFEM UKACM 2021 School: "Weak form" in many flavours.
-Design and sustainable code development
-
+\tableofcontents
 
 \subsection school_intro Introduction
  
@@ -27,13 +24,13 @@ Talk on the Poisson problem in MoFEM explains:
 - a way to handle homogeneous boundary condition in MoFEM
 - utilisation of tools to convert outputs (MOAB) and visualise them (Paraview)
 
-For more details see tutorial SCL-1: \ref basic_tutorials_poisson_homogeneous.
-
 \htmlonly
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/vKEje6k89z0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 \endhtmlonly
+
+For more details see tutorial \ref basic_tutorials_poisson_homogeneous.
 
 \subsection school_acoustic Linear acoustics
  
@@ -43,14 +40,13 @@ In this tutorial you will learn how to:
 - Deal with two fields in MoFEM
 - Push Forms Integrators into the pipelines
 
-For more details, see tutorial CLX-0: \ref tutorial_hemholtz_problem.
-
 \htmlonly
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/5aZuwbAUUkY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 \endhtmlonly
 
+For more details, see tutorial \ref tutorial_hemholtz_problem.
 
 \subsection school_elastic Elastic problem
  
@@ -60,13 +56,14 @@ Talk on the elasticity problem in MoFEM finite element library at the UKACM Scho
 - Introduction to nonlinear problems based on Hencky material
 - Methods for verifying tangent stiffness matrix
 
-The full tutorials for linear and nonlinear case with source code dissections can be found in tutorial VEC-0: \ref tutorial_elastic_problem and VEC-2: \ref tutorial_nonlinear_elastic.
-
 \htmlonly
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Hoz2Mqql25A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 \endhtmlonly
+
+The full tutorials for linear and nonlinear case with source code dissections can be found in tutorial \ref tutorial_elastic_problem and VEC-2: \ref tutorial_nonlinear_elastic.
+
 
 \subsection school_mixed Mixed Finite Elements
  
@@ -78,13 +75,13 @@ Talk on the mixed finite element formulation at the UKACM School 2021 includes:
 - Convergence analysis for p-adaptive refinement
 - Conclusions and further reading
 
-For more details, see tutorial MIX-0: \ref tut_mix_poisson.
-
 \htmlonly
 <center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/T40n76UwKo0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 \endhtmlonly
+
+For more details, see tutorial \ref tut_mix_poisson.
 
 \subsection mofem_additional_materials Additional materials
 
