--- a/tutorials/doc/tutorials.dox
+++ b/tutorials/doc/tutorials.dox
@@ -326,7 +326,7 @@ continuing with the one you are most excited about.
   <tr valign="top">
        <td width="350px">\ref tutorial_thermo_elastic</td>
        <td> Solve thermo-elasto-plastic probelm
-       <br/> *Keywords:* *Keywords:* multi-physiscs
+       <br/> *Keywords:* *Keywords:* multi-physics
        </td>
   </tr>
 
