--- a/mofem/doc/references.bib
+++ b/mofem/doc/references.bib
@@ -703,3 +703,464 @@ note = {Report}
   year={2019},
   publisher={Elsevier}
 }
+
+%%-----------------------------------------------------------------
+
+%% REFERENCES FOR YOUR REPORT should have NO KEYWORD
+%% Journal article
+
+@Article{Lukasz_MOFEM,
+	author     = {L. Kaczmarczyk and Z. Ullah and K. Lewandowski and X. Meng and X-Y. Zhou and I. Athanasiadis and H. Nguyen and C-A. Chalons-Mouriesse and E. J. Richardson and E. Miur and A. Shvarts and M. Wakeni and C. Pearce},
+	title      = {MoFEM: An open source, parallel finite element library},
+	journal    = {The Journal of Open Source Software},
+	year       = {2020},
+	volume     = {5},
+% 	pages      = {1441},
+	% number     = {TheNumber},
+	%  note    = {Submitted, Accepted, In preparation},
+}
+
+@Article{Miehe_Karol,
+	author     = {C. Miehe and N. Apel and M. Lambrecht},
+	title      = {Anisotropic additive plasticity in the logarithmic strain space: Modular kinematic formulation and implementation based on incremental minimization principles for standard materials},
+	journal    = {Computer Methods in Applied Mechanics and Engineering},
+	year       = {2002},
+	volume     = {191},
+	pages      = {5383--5425},
+	% number     = {TheNumber},
+	%  note    = {Submitted, Accepted, In preparation},
+}
+
+
+@Article{Yang_Andrei,
+	author     = {Y. Xu and G. Min and N. Gadegaard and R. Dahiya and D. M. Mulvihill},
+	title      = {A unified contact force-dependent model for triboelectric nanogenerators accounting for surface roughness},
+	journal    = {Nano Energy},
+	year       = {2020},
+	volume     = {76},
+% 	pages      = {105067},
+	% number     = {TheNumber},
+	%  note    = {Submitted, Accepted, In preparation},
+}
+
+@Article{Ortiz_Adriana,
+	author     = {T. Kirchdoefer and M. Ortiz},
+	title      = {Data-driven computational mechanics},
+	journal    = {Computer Methods in Applied Mechanics and Engineering},
+	year       = {2016},
+	volume     = {304},
+	pages      = {81--101},
+	% number     = {TheNumber},
+	%  note    = {Submitted, Accepted, In preparation},
+}
+
+@Article{Kaczmarczyk_Ignatios,
+	author     = {L. Kaczmarczyk and Z. Ullah and C. Pearce},
+	title      = {Energy consistent framework for continuously
+	evolving 3D crack propagation},
+	journal    = {Computer Methods in Applied Mechanics and Engineering},
+	year       = {2017},
+	volume     = {324},
+	%pages      = {54--73},
+	% number     = {TheNumber},
+	%  note    = {Submitted, Accepted, In preparation},
+}
+
+@Article{Popp_Ignatios,
+	author     = {A. Popp and M. W. Gee and W. A. Wall},
+	title      = {A finite deformation mortar contact formulation using a primal-dual active set strategy},
+	journal    = {International Journal for Numerical Methods in Engineering},
+	year       = {2009},
+	volume     = {79},
+	%pages      = {1354--1391},
+	% number     = {TheNumber},
+	%  note    = {Submitted, Accepted, In preparation},
+}
+
+@Article{wakeni2021p,
+    title={A p-adaptive, implicit-explicit mixed finite element method for diffusion-reaction problems},
+    author={Wakeni, Mebratu F and Aggarwal, Ankush and Kaczmarczyk, {\L}ukasz and McBride, Andrew T and Athanasiadis, Ignatios and Pearce, Chris J and Steinmann, Paul},
+    journal={International Journal for Numerical Methods in Engineering},
+    volume={123},
+    number={14},
+    pages={3237--3263},
+    year={2022},
+    publisher={Wiley Online Library}
+}
+
+@article{ Wohlmuth2004,
+Author = "H{\"{u}}eber, S and Wohlmuth, BI",
+Title = "A primal-dual active set strategy for non-linear multibody contact
+   problems",
+Journal = "Computer methods in applied mechanics and engineering",
+Year = "2005",
+Volume = "194",
+Number = "27-29",
+Pages = "3147-3166",
+}
+
+@article{ DualMortar2DPop,
+Author = "Popp, A and Gee, MW and Wall, WA",
+Title = "A finite deformation mortar contact formulation using a primal-dual
+   active set strategy",
+Journal = "International Journal for Numerical Methods in Engineering",
+Year = "2009",
+Volume = "79",
+Number = "11",
+Pages = "1354-1391",
+}
+
+@article{Athanasiadis2019,
+Author = "Athanasiadis, I. and Kaczmarczyk, \L. and Ullah, Z., and Pearce, C.J.",
+Title = "Mortar contact formulation for hierarchical basis functions using smooth active set strategy",
+Journal = "Paper presented at UK Association for Computational Mechanics Conference, London, United Kingdom",
+Year = "2019",
+}
+
+
+@article{Athanasiadis2021,
+Author = "Athanasiadis, I. and Ullah, A. G, and Kaczmarczyk, \L. and Pearce, C.J.",
+Title = "Brittle crack propagation intersecting a contact interface within the framework of Arbitrary Lagrangian-Eulerian description of motion",
+Journal = "Paper presented at UK Association for Computational Mechanics Conference, London, United Kingdom",
+Year = "2021",
+}
+
+@misc{kuliková_shvarts_kaczmarczyk_pearce_2021,
+  title        = {Data-driven finite element method},
+  doi          = {10.17028/rd.lboro.14588577.v1},
+  publisher    = {Loughborough University},
+  author       = {Kuliková, Adriana and Shvarts, Andrei G. and Kaczmarczyk, Lukasz and Pearce, Chris J.},
+  year         = {2021},
+  month        = {May}
+} 
+
+@book{simo2006computational,
+  title={Computational inelasticity},
+  author={Simo, Juan C and Hughes, Thomas JR},
+  volume={7},
+  year={2006},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{locat2002submarine,
+  title     = {Submarine landslides: advances and challenges},
+  author    = {Locat, Jacques and Lee, Homa J},
+  journal   = {Canadian Geotechnical Journal},
+  volume    = {39},
+  number    = {1},
+  pages     = {193--212},
+  year      = {2002},
+  publisher = {NRC Research Press Ottawa, Canada}
+}
+@article{wheeler1988conceptual,
+  title     = {A conceptual model for soils containing large gas bubbles},
+  author    = {Wheeler, SJ},
+  journal   = {Geotechnique},
+  volume    = {38},
+  number    = {3},
+  pages     = {389--397},
+  year      = {1988},
+  publisher = {Thomas Telford Ltd}
+}
+
+@article{shvartsfinite,
+  title={Finite-element modelling of triboelectric nanogenerators accounting for surface roughness},
+  author={Shvarts, Andrei G and Xu, Yang and Min, Guanbo and Athanasiadis, Ignatios and Kaczmarczyk, Lukasz and Mulvihill, Daniel M and Pearce, Chris J},
+  publisher={Loughborough University},
+  journal = "Proceedings of UKACM 2021 conference",
+  Year = "2021"
+}
+
+@article{tonolini2020variational,
+  title={Variational inference for computational imaging inverse problems},
+  author={Tonolini, Francesco and Radford, Jack and Turpin, Alex and Faccio, Daniele and Murray-Smith, Roderick},
+  journal={Journal of Machine Learning Research},
+  volume={21},
+  number={179},
+  year={2020},
+  publisher={Microtome Publishing}
+}
+
+@article{pickering2013macrosegregation,
+  title={Macrosegregation in steel ingots: the applicability of modelling and characterisation techniques},
+  author={Pickering, Edward John},
+  journal={ISIJ international},
+  volume={53},
+  number={6},
+  pages={935--949},
+  year={2013},
+  publisher={The Iron and Steel Institute of Japan}
+}
+
+@article{pickering2015comprehensive,
+  title={A comprehensive case study of macrosegregation in a steel ingot},
+  author={Pickering, Ed J and Chesman, Connor and Al-Bermani, Sinan and Holland, Melanie and Davies, Peter and Talamantes-Silva, Jesus},
+  journal={Metallurgical and Materials Transactions B},
+  volume={46},
+  number={4},
+  pages={1860--1874},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{radford2020role,
+  title={Role of late photons in diffuse optical imaging},
+  author={Radford, Jack and Lyons, Ashley and Tonolini, Francesco and Faccio, Daniele},
+  journal={Optics Express},
+  volume={28},
+  number={20},
+  year={2020},
+  publisher={Optical Society of America}
+}
+
+@article{lyons2019computational,
+  title={Computational time-of-flight diffuse optical tomography},
+  author={Lyons, Ashley and Tonolini, Francesco and Boccolini, Alessandro and Repetti, Audrey and Henderson, Robert and Wiaux, Yves and Faccio, Daniele},
+  journal={Nature Photonics},
+  volume={13},
+  number={8},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+%% Proceeding
+%@Inproceedings{SurnameNumber,
+% author     = {F. LastName1 and F. LastName2 and F. LastName3},
+% title      = {Titel},
+% booktitle  = {Booktitel},
+% editor     = {LastName4, F.},
+% journal    = {Journalname},
+% year       = {ThisYear},
+% publisher  = {xxx},
+% pages      = {xx -- xx},
+%%  note    = {Submitted, Accepted, In preparation},
+%}
+%
+%% InCollection/Inbook: A book chapter
+%@InBook{SurnameNumber,
+%   author     = {F. LastName1 and F. LastName2 and F. LastName3},
+%   title      = {Chaptertitle},
+%   booktitle  = {Booktitle},
+%   editor     = {F. LastName4},
+%   publisher  = {xxx},
+%   year       = {ThisYear},
+%   volume     = {Volumenumber},
+%   number     = {TheNumber},
+%   chapter    = {ChapterNumber},
+%   pages      = {xx -- xx},
+%   edition    = {TheEdition},
+%   address    = {Adress of the publisher: City, State, Country},
+%%  note    = {Submitted, Accepted, In preparation},
+%}
+%
+%% An entire book
+%@Book{SurnameNumber,
+%   author     = {F. LastName1 and F. LastName2 and F. LastName3},
+%   title      = {Booktitle},
+%   editor     = {F. LastName4},
+%   publisher  = {xxx},
+%   year       = {ThisYear},
+%   volume     = {Volumenumber},
+%   number     = {TheNumber},
+%   edition    = {TheEdition},
+%   address    = {Adress of the publisher: City, State, Country},
+%%  note    = {Submitted, Accepted, In preparation},
+%}
+
+@article{lockington2022evaluating,
+  title={Evaluating the forces involved in bubble management in DMEK surgery--a mathematical and computational model with clinical implications},
+  author={Lockington, David and Brown, Gordon and Pearce, Chris and Kaczmarczyk, Lukasz},
+  journal={Journal of Cataract \& Refractive Surgery},
+  pages={10--1097},
+  year={2022},
+  publisher={LWW}
+}
+
+
+@book{boffi2013mixed,
+  title     = {Mixed finite element methods and applications},
+  author    = {Boffi, Daniele and Brezzi, Franco and Fortin, Michel and others},
+  volume    = {44},
+  year      = {2013},
+  publisher = {Springer}
+}
+
+@article{kirchdoerfer_data-driven_2016,
+	title = {Data-driven computational mechanics},
+	volume = {304},
+	issn = {00457825},
+	doi = {10.1016/j.cma.2016.02.001},
+	pages = {81--101},
+	journaltitle = {Computer Methods in Applied Mechanics and Engineering},
+	shortjournal = {Computer Methods in Applied Mechanics and Engineering},
+	author = {Kirchdoerfer, T. and Ortiz, M.},
+	date = {2016-06},
+        year = {2016},
+	langid = {english},
+	keywords = {data-driven, udine}
+}
+
+@article{Lewandowski2023,
+title = {Multifield finite strain plasticity: Theory and numerics},
+journal = {Computer Methods in Applied Mechanics and Engineering},
+volume = {414},
+pages = {116101},
+year = {2023},
+issn = {0045-7825},
+author = {Karol Lewandowski and Daniele Barbera and Paul Blackwell and Amir H. Roohi and Ignatios Athanasiadis and Andrew McBride and Paul Steinmann and Chris Pearce and Łukasz Kaczmarczyk}
+}
+
+@article{niu_tanzib,
+  title={Theoretical study of contact-mode triboelectric nanogenerators as an effective power source},
+  author={Niu, Simiao and Wang, Sihong and Lin, Long and Liu, Ying and Zhou, Yu Sheng and Hu, Youfan and Wang, Zhong Lin},
+  journal={Energy \& Environmental Science},
+  volume={6},
+  number={12},
+  pages={3576--3583},
+  year={2013},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{3DIC_and_CMOS, author={Lin, X.-W. and Moroz, V. and Xu, X. and Gao, Y. and Rennie, D. and Asenov, P. and Smidstrup, S. and Sherlekar, D. and Qin, Z. and Fang, T. and Lee, J. and Choi, M. and Jones, S.},
+  booktitle={2021 IEEE International Electron Devices Meeting (IEDM)}, 
+  title={Heterogeneous Integration Enabled by the State-of-the-Art 3DIC and CMOS Technologies: Design, Cost, and Modeling}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={3.4.1-3.4.4},
+  doi={10.1109/IEDM19574.2021.9720707}}
+}
+
+@article{Takashi_Hisada2012,
+  title={FEM Analysis on Mechanical Stress of 2.5D Package Interposers},
+  author={Takashi Hisada and Toyohiro Aoki and Junko Asai and Yasuharu Yamada},
+  journal={Transactions of The Japan Institute of Electronics Packaging},
+  volume={5},
+  number={1},
+  pages={107-114},
+  year={2012},
+  doi={10.5104/jiepeng.5.107}
+}
+
+@article{athanasiadis2023computational,
+  title={A computational framework for crack propagation along contact interfaces and surfaces under load},
+  author={Athanasiadis, Ignatios and Shvarts, Andrei G and Ullah, Zahur and Lewandowski, Karol and Pearce, Chris J and Kaczmarczyk, {\L}ukasz},
+  journal={Computer Methods in Applied Mechanics and Engineering},
+  volume={414},
+  pages={116129},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{kulikovadata,
+  title={Data-driven finite element method},
+  author={Kulikov{\'a}, Adriana and Shvarts, Andrei G and Kaczmarczyk, Lukasz and Pearce, Chris J},
+ publisher={Loughborough University},
+  journal = "Proceedings of UKACM 2021 conference",
+  Year = "2021"
+}
+
+@inproceedings{radford2022imaging,
+  title={Imaging Beyond 100 Transport Mean Free Paths using Variational Autoencoding},
+  author={Radford, Jack and Nerenberg, Samuel and Shvarts, Andrei and Kaczmarcyk, Lukasz and Faccio, Daniele},
+  booktitle={Computational Optical Sensing and Imaging},
+  pages={CM3A--5},
+  year={2022},
+  organization={Optica Publishing Group}
+}
+
+@article{bellet2009call,
+  title={Call for contributions to a numerical benchmark problem for 2D columnar solidification of binary alloys},
+  author={Bellet, Michel and Combeau, H and Fautrelle, Y and Gobin, D and Rady, M and Arquis, E and Budenkova, O and Dussoubs, B and Duterrail, Y and Kumar, A and others},
+  journal={International Journal of Thermal Sciences},
+  volume={48},
+  number={11},
+  pages={2013--2016},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{chen2020finite,
+  title={A Finite Element Method for Prediction of Macrosegregation with Solidification Columnar},
+  author={Chen, Qipeng and Shen, Houfa},
+  journal={Journal of International Scientific Publications: Materials, Methods and Technologies (Online)},
+  volume={14},
+  pages={1--8},
+  year={2020}
+}
+
+@inproceedings{combeau2012analysis,
+  title={Analysis of a numerical benchmark for columnar solidification of binary alloys},
+  author={Combeau, Herv{\'e} and Bellet, Michel and Fautrelle, Yves and Gobin, Dominique and Arquis, Eric and Budenkova, Olga and Dussoubs, Bernard and Du Terrail, Yves and Kumar, Arvind and Gandin, Ch-A and others},
+  booktitle={IOP Conference Series: Materials Science and Engineering},
+  volume={33},
+  number={1},
+  pages={012086},
+  year={2012},
+  organization={IOP Publishing}
+}
+
+@article{piezo_electrics_2021,
+author = {Mahapatra, Susmriti Das and Mohapatra, Preetam Chandan and Aria, Adrianus Indrat and Christie, Graham and Mishra, Yogendra Kumar and Hofmann, Stephan and Thakur, Vijay Kumar},
+title = {Piezoelectric Materials for Energy Harvesting and Sensing Applications: Roadmap for Future Smart Materials},
+journal = {Advanced Science},
+volume = {8},
+number = {17},
+pages = {2100864},
+doi = {https://doi.org/10.1002/advs.202100864},
+year = {2021}
+}
+
+@incollection{COCHRAN20123,
+title = {1 - Piezoelectricity and basic configurations for piezoelectric ultrasonic transducers},
+booktitle = {Ultrasonic Transducers},
+publisher = {Woodhead Publishing},
+pages = {3-35},
+year = {2012},
+series = {Woodhead Publishing Series in Electronic and Optical Materials},
+doi = {https://doi.org/10.1533/9780857096302.1.3},
+author = {S. Cochran},
+}
+
+@article{luchtefeld2020elasticity,
+  title={Elasticity spectra as a tool to investigate actin cortex mechanics},
+  author={L{\"u}chtefeld, Ines and Bartolozzi, Alice and Mej{\'\i}a Morales, Juli{\'a}n and Dobre, Oana and Basso, Michele and Zambelli, Tomaso and Vassalli, Massimo},
+  journal={Journal of nanobiotechnology},
+  volume={18},
+  number={1},
+  pages={1--11},
+  year={2020},
+  publisher={BioMed Central}
+}
+
+@article{krieg2019atomic,
+  title={Atomic force microscopy-based mechanobiology},
+  author={Krieg, Michael and Fl{\"a}schner, Gotthold and Alsteens, David and Gaub, Benjamin M and Roos, Wouter H and Wuite, Gijs JL and Gaub, Hermann E and Gerber, Christoph and Dufr{\^e}ne, Yves F and M{\"u}ller, Daniel J},
+  journal={Nature Reviews Physics},
+  volume={1},
+  number={1},
+  pages={41--57},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@article{efremov2020measuring,
+  title={Measuring viscoelasticity of soft biological samples using atomic force microscopy},
+  author={Efremov, Yuri M and Okajima, Takaharu and Raman, Arvind},
+  journal={Soft matter},
+  volume={16},
+  number={1},
+  pages={64--81},
+  year={2020},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{zuo2020transport,
+  title={Transport of intensity equation: a tutorial},
+  author={Zuo, Chao and Li, Jiaji and Sun, Jiasong and Fan, Yao and Zhang, Jialin and Lu, Linpeng and Zhang, Runnan and Wang, Bowen and Huang, Lei and Chen, Qian},
+  journal={Optics and Lasers in Engineering},
+  volume={135},
+  pages={106187},
+  year={2020},
+  publisher={Elsevier}
+}
